- Changed: ignoring illegal Raspberry temperature (85/-273)
- Fixed: Scenes with a Push On type switch will now only send the On command to this switch
- Fixed: Possible timer problem duo sunset/sunrise reloading issues
- Implemented: Device type Blinds (Safy / RollerTrol / Hasta / A-OK RF01,AC114 / RAEX /  Media Mount)

Version 1.0.484 (April 28th 2013)
- Implemented: Raspberry Pi, updating via the web browser (Settings Tab)
- Implemented: Web Gui, sticky Notification (now only used when there is an update for the Raspberry Pi)
- Fixed: ResetSecurityStatus json return status
- Implemented: Option to display update check
- Implemented: Utility sensors now display their usage value in large font
- Implemented/Fixed: web update now not available for ArchLinux raspberry pi
- Implemented: Version number now read with json call
- Fixed: NMA notifications working again
- Fixed: Visual Studio svn template was not added to SVN
- Implemented: Browser cache is not automatically refresh (with a standby notification)
- Implemented: Notifications for new updates are now send once in every 12 hours, unless checked by hand
- Changed: Temperatures can now be max. 260 degrees
- Implemented: New wind rose icons
- Fixed: Adding Light/Switch as Sub-Device from Devices tab
- Changed: Negative wind direction to positive
- Implemented: Support for the heat pump controller Rego600-Rego637 (Rego6XX)
- Fixed: Dashboard showed all light devices instead of only favorite ones
- Fixed: Sensor Timeout status update in web interface
- Fixed: Rain (PCR800) rate/hour corrected
- Implemented: Add support for Lighting6 (Blyss)
- Implemented: Push On Button switch type (sends an ON command, with option to specify Off delay)
- Changed: Better day value calculation for meter devices
- Implemented: Raspberry Pi onboard temperature sensor
- Fixed: Meter value dupplication checked now performed for actual day
- Updated: Charts Library